--- a/test.html
+++ b/test.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<img src="z3015570769713_001_bfafeadf038552324cd13f0b0dde61fd.jpg" height="2560" width="1920"/>
+<p>Browsers usually indent blockquote elements.</p>
+
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+    For nearly 60 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by more than one million members in the United States and close to five million globally.
+</blockquote>
 </body>
 </html>
