--- a/test_innerHTML.html
+++ b/test_innerHTML.html
@@ -5,8 +5,15 @@
     <title>Title</title>
 </head>
 <body>
+
+<h2>JavaScript Variables</h2>
+
+<p>In this example, x is defined as a variable.
+    Then, x is assigned the value of 6:</p>
+
 <p id="demo"></p>
-<button type="button" onclick="document.getElementById('demo').innerHTML= 'cái quần què gì đây' ">click</button>
+
+</script>
 
 </body>
 </html>
