--- a/test_innerHTML.html
+++ b/test_innerHTML.html
@@ -5,15 +5,23 @@
     <title>Title</title>
 </head>
 <body>
+<h1 style="background: orange; color: white; width: 400px; text-align: center">sở thích của bạn</h1>
+<label for="hovaten">Họ và tên</label>
+<input type="text" id="hovaten"><br>
+<label for="email">Email</label>
+<input type="text" id="email"><br>
+<label for="sothich">Sở thích</label>
+<input type="checkbox" id="sothich">
 
-<h2>JavaScript Variables</h2>
+<input type="checkbox" id="sothich">
+<input type="checkbox" id="sothich"><br>
+<input type="checkbox" id="sothich">
+<input type="checkbox" id="sothich">
+<input type="checkbox" id="sothich"><br>
+<input type="checkbox" id="sothich"><br>
+<button type="submit">gửi thông tin</button>
+<button type="reset">nhập lại</button>
 
-<p>In this example, x is defined as a variable.
-    Then, x is assigned the value of 6:</p>
-
-<p id="demo"></p>
-
-</script>
 
 </body>
 </html>
