--- a/may_tinh.html
+++ b/may_tinh.html
@@ -19,6 +19,10 @@
         {
             color: orange;
         }
+        button{
+            width: 100px;
+            height: 100px;
+        }
 
 
     </style>
@@ -52,7 +56,7 @@
         <td><input type="button" onclick="xoa()" value="C"></td>
         <td><input type="button" onclick="bam(this.value)" value="2"></td>
         <td><input type="button" onclick="bang()" value="="></td>
-        <td><input type="button" onclick="bam(this.value)" value="/"></td>
+        <td><button onclick="bam(this.value)" value="/">/</button> </td>
     </tr>
 
     <script>
