--- a/may_tinh_test.html
+++ b/may_tinh_test.html
@@ -38,7 +38,7 @@
     </tr>
 </table>
 <script>
-    function nhap(so) {
+    function nhap() {
         document.getElementById("window").value += so;
     }
     function bang() {
