--- a/test_js.html
+++ b/test_js.html
@@ -6,10 +6,13 @@
 
 </head>
 <body>
- <button onclick="phepcong()">Phép cộng</button>
- <button onclick="phepcong()">Phép trừ</button>
-
-<script src="demo.js"></script>
-
+<p id="demo"></p>
+<script>
+    let x = 10;
+    let y = 5;
+    let z = x + y;
+    let b = x - y;
+    <onclick= >
+</script>
 </body>
 </html>
