--- a/test_js.html
+++ b/test_js.html
@@ -12,7 +12,9 @@
     let y = 5;
     let z = x + y;
     let b = x - y;
-    <onclick= >
+
 </script>
+<button onclick="alert(z)">z</button>
+<button onclick=" alert(b)">b</button>
 </body>
 </html>
