--- a/bai__tap_3.html
+++ b/bai__tap_3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let numbers = +prompt("Nhập số số nguyên tố muốn hiển thị ra màn hình: ");
+    let numbers = +prompt("Nhập số nguyên tố muốn hiển thị ra màn hình: ");
     let count = 0;
     let N = 2;
     while (count < numbers) {
