--- a/test_js.html
+++ b/test_js.html
@@ -13,8 +13,9 @@
     let z = x + y;
     let b = x - y;
 
+
 </script>
-<button onclick="alert(z)">z</button>
-<button onclick=" alert(b)">b</button>
+    <button onclick="document.getElementById('demo').innerHTML= z"> z </button>
+    <button onclick="document.getElementById('demo').innerHTML= b"> b </button>
 </body>
 </html>
