--- a/test_js.html
+++ b/test_js.html
@@ -6,16 +6,9 @@
 
 </head>
 <body>
-<p id="demo"></p>
 <script>
-    let x = 10;
-    let y = 5;
-    let z = x + y;
-    let b = x - y;
-
-
+    let xacNhan=confirm("Bạn có muốn xoá thông tin?");
+    alert(xacNhan);
 </script>
-    <button onclick="document.getElementById('demo').innerHTML= z"> z </button>
-    <button onclick="document.getElementById('demo').innerHTML= b"> b </button>
 </body>
 </html>
