--- a/practice.html
+++ b/practice.html
@@ -7,8 +7,10 @@
 <body>
 <label for="demo">tên</label>
 <input type="text" id="demo"><br>
-<button id="demo" onclick="document.getElementById('ddd').innerHTML" = >hiển thị</button>
+<button id="demo" type="submit" >hiển thị</button>
 <p id="ddd"></p>
-
+<script>
+    
+</script>
 </body>
 </html>
