--- a/practice.html
+++ b/practice.html
@@ -6,16 +6,27 @@
 </head>
 
 <body>
-<label for="demo">tên</label>
-<input type="text" id="demo"><br>
-
-<button onclick= "input()">hiển thị</button>
-<p id="ddd"></p>
+<input type="text" id="txtValue"/>
+<input type="button" id="btnAdd" value="Add" onclick="add_element_to_array();"/>
+<input type="button" id="btnDisplay" value="Display" onclick="display_array();"/>
+<div id="result"></div>
 <script>
-    function input() {
-        let value = document.getElementById('demo').value;
-        alert(value +'');
+    let x = 0;
+    let array = Array();
+    function add_element_to_array() {
+        array[x] = document.getElementById("txtValue").value;
+        alert("Element: " + array[x] + " Added at index " + x);
+        x++;
+        document.getElementById("txtValue ").value = "";
     }
-    </script>
+
+    function display_array() {
+        let e = "<hr/>";
+        for (let i = 0; i < array.length; i++) {
+            e += "Element " + i + " = " + array[i] + "<br/>";
+        }
+        document.getElementById("result").innerHTML = e;
+    }
+</script>
 </body>
 </html>
