--- a/array_practice.html
+++ b/array_practice.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1><i>Sample screen</i></h1>
-<label for="nhapso"></label>
-<input id="nhapso" type="number">
-<input type="button" onclick="nhapgiatri()" value="Add">
-<input type="button" onclick="display()" value="Display">
+<label for="khungnhapso"></label>
+<input type="number" id="khungnhapso">
+<button id="themso" type="button" onclick="arr_add()">Add</button>
+<button id="hienthiso" type="button" onclick="arr_display()">Display</button>
 <br><br>
 <h4 id="hienthi"></h4>
 <script>
     let x = 0;
-    let value = Array();
-   function nhapgiatri () {
-       value[x] = document.getElementById('nhapso').value;
-       x++;
-       alert(value);
-   }
+    let arr = [];
+    function arr_add() {
+    arr[x] = document.getElementById('khungnhapso').value;
+    alert(arr[x]);
+    x++;
+    document.getElementById('khungnhapso').value = "";
+    }
 
-    function display() {
-       let e = "<hr/>";
-       for (let e)
-        document.getElementById('hienthi').innerHTML = value;
-
+    function arr_display() {
+        let r = "<hr/>";
+        for (let i = 0; i < arr.length; i++) {
+            r += "số thứ : " + arr[i] + "<br>";
+        }
+        document.getElementById('hienthi').innerHTML = r ;
     }
 </script>
 </body>
