--- a/practice.html
+++ b/practice.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-<input type="text" id="txtValue"/>
+<label for="txtValue">điền số</label><input type="text" id="txtValue"/>
 <input type="button" id="btnAdd" value="Add" onclick="add_element_to_array();"/>
 <input type="button" id="btnDisplay" value="Display" onclick="display_array();"/>
 <div id="result"></div>
 <script>
     let x = 0;
-    let array = Array();
+    let array = Array(); // 23 12 25
     function add_element_to_array() {
         array[x] = document.getElementById("txtValue").value;
         alert("Element: " + array[x] + " Added at index " + x);
