--- a/dao_nguoc_cac_phan_tu_trong_mang.html
+++ b/dao_nguoc_cac_phan_tu_trong_mang.html
@@ -18,20 +18,35 @@
     let arr = [];
     function arr_themsovaomang() {
         arr[x] = document.getElementById('nhapmang').value;
-        x++;
-        document.getElementById('nhapmang').value = "";
+        if (arr[x] === ""){
+            alert("nhập dữ liệu vào đi thèn loz")
+        }else {
+            x++;
+            document.getElementById('nhapmang').value = "";
+        }
     }
     
     function arr_xemnhungsotrongmang() {
         let r = "";
         for (let i = 0; i < arr.length ; i++) {
-            r += "số thứ " + i + ":" + arr[i] + "<br>";
-            document.getElementById('hienthi').innerHTML = r;
+            if (arr[i] === ""){
+            }
+            else {r += "số thứ " + i + ":" + arr[i] + "<br>";
+                document.getElementById('hienthi').innerHTML = r;
+            }
         }
     }
 
     function arr_daonguocmang() {
-        arr.reverse();
+        let first = 0;
+        let last = arr.length - 1;
+        while (first < last){
+            let b = arr[last];
+            arr[first] = arr[last];
+            arr[first] = b;
+            first ++;
+            last --;
+        }
         alert(arr);
     }
 
