--- a/tim_gia_tri_lon_nhat_trong_mang.html
+++ b/tim_gia_tri_lon_nhat_trong_mang.html
@@ -5,26 +5,48 @@
     <title>Title</title>
 </head>
 <body>
-<h3>TÌM GIÁ TRỊ LỚN NHẤT TRONG MẢNG</h3>
-<label for="nhapmang"></label>
-<input type="number" id="nhapmang"><br>
-<button type="button" onclick="arr_themvaomang()">Thêm vào mảng</button>
-
+<h1>TÌM GIÁ TRỊ LỚN NHẤT TRONG MẢNG</h1>
+<label for="nhapmang">Xin mời nhập dữ liệu cho mảng</label><br>
+<input id="nhapmang" type="number"><br><br>
+<button id="themsovaomang" type="button" onclick="arr_themsovaomang()">Thêm số vào mảng </button>
+<button id="xemnhungsodanhapvaomang" type="button" onclick="arr_xemnhungsotrongmang()">Xem những số có trong mảng</button>
+<button id="timsolonnhat" type="button" onclick="arr_timsolonnhat()">Tìm số lớn nhất</button>
+<hr>
+<p id="hienthi"></p>
 <script>
-    let x = 0
+    let x = 0;
     let arr = [];
-    function arr_themvaomang() {
+    function arr_themsovaomang() {
         arr[x] = document.getElementById('nhapmang').value;
         if (arr[x] === ""){
-            alert("bạn chưa nhập giá chị cho mảng");
-        } else {
-            alert('giá trị trong mảng là : ' + arr);
+            alert("nhập dữ liệu vào đi thèn loz")
+        }else {
             x++;
-            document.getElementById("nhapmang").value = "";
+            document.getElementById('nhapmang').value = "";
         }
-
     }
-    
+
+    function arr_xemnhungsotrongmang() {
+        let r = "";
+        for (let i = 0; i < arr.length ; i++) {
+            if (arr[i] === ""){
+            }
+            else {r += "số thứ " + i + ":" + arr[i] + "<br>";
+                document.getElementById('hienthi').innerHTML = r;
+            }
+        }
+    }
+
+    function arr_timsolonnhat() {
+        let max = arr[0];
+        for (let i = 0; i < arr.length; i++) {
+            if (max < arr[i]) {
+                max = arr[i];
+            }
+        }
+        alert("số lớn nhất là : " + max);
+    }
+
 </script>
 
 </body>
