--- a/case_study.html
+++ b/case_study.html
@@ -16,25 +16,28 @@
 
 <script>
     function bai1() {
-        let n = +prompt("nhập chiều dài của hình chữ nhật");
-        let m = +prompt("nhập chiều rộng của hình nhật");
+        let inramanhinh = "";
+        let m, n;
+        do {
+            n = +prompt("nhập chiều dài của hình nhật");
+            m = +prompt("nhập chiều rộng của hình chữ nhật");
+        } while (n < m || n < 0 || m < 0);
+
         for (let i = 0; i < m; i++) {
-            if (1 <= i < m ){
-                for (let j = 0; j < n; j++) {
-                    if (1 < j < n) {
-                        for (let k = 0; k < n - 1; k++) {
-                            document.write("&");
-                        }
-                    }else {
-                        document.write("*");
-                    }
+            if (i > 0 && i < m -1) {
+                inramanhinh += "* ";
+                for (let j = 1; j < n-1; j++) {
+                    inramanhinh += "&nbsp;&nbsp;&nbsp";
                 }
-                else {
-                    document.write("ádasd");
+                inramanhinh += "* " + "<br>";
+            }else {
+                for (let k = 0; k < n ; k++) {
+                    inramanhinh += "* ";
                 }
+                inramanhinh += "<br>";
             }
         }
-
+        document.write(inramanhinh);
     }
 
     function bai2() {
