--- a/test_case_study.html
+++ b/test_case_study.html
@@ -13,18 +13,10 @@
         let inramanhinh = "";
         do {
             h = +prompt("nhập chiều cao của tam giác vuông ");
-        }while (h <0);
-        for (let i = 1; i < h; i++) {
-            for (let j = 1; j < h; j++) {
-                inramanhinh += "*";
-                if (j > 1 || j < h) {
-                    inramanhinh += "&nbsp;&nbsp";
-                }
-                inramanhinh += "*" + "<br>";
-            }
+        } while (h < 0);
+        for (let i = 0; i < ; i++) {
+            
         }
-        document.write(inramanhinh);
-    }
 </script>
 </body>
 </html>
