--- a/test/test.html
+++ b/test/test.html
@@ -5,14 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<button type="button" onclick="hello()">cbcb</button>
 <script>
-    function change1(a) {
-        a++;
-        alert("a trong hàm "+ a);
+    function hello(name) {
+
+        alert("Xin chào, " + name);
     }
-    let x = 10;
-    change1(x);
-    alert("x ngoài hàm  :"+ x);
 </script>
 </body>
 </html>
