--- a/test/test.html
+++ b/test/test.html
@@ -5,12 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-<button type="button" onclick="hello()">cbcb</button>
+<button type="button" onclick="nnn()">cbcb</button>
 <script>
-    function hello(name) {
+    function support_Practice_Function_1_Bai_4() {
+        let firstNum = 4;
+        let secondNum = 8;
+        result = firstNum + secondNum;
+        return result;
 
-        alert("Xin chào, " + name);
     }
+    function practice_Function_1_Bai_4() {
+        result = 0;
+        result = support_Practice_Function_1_Bai_4();
+        alert(result);
+    }
+
 </script>
 </body>
 </html>
