--- a/test/ham_2.html
+++ b/test/ham_2.html
@@ -252,8 +252,12 @@
     }
 
     function practice_Function_2_bai_9() {
-        let n = +prompt("Nhập vào đây số phần tử trong mảng");
+        let n = prompt("Nhập vào đây số phần tử trong mảng");
         let arr = [];
+        for (let i = 0; i < n ; i++) {
+            arr[i] = prompt("Nhập vào đây giá trị thứ " + (i +1));
+        }
+        let check = prompt("Nhập vào đây giá trị cần kiểm tra");
 
     }
 
